refactor(data): encapsular datos de usuarios y ocultar constructor
- Se añadió un constructor privado a la clase `UsuariosData` para evitar
  instanciación, cumpliendo buenas prácticas para clases de utilidades.
- Los campos de `UsuarioInfo` se hicieron `private final` y se añadieron getters
  mediante Lombok (`@Getter`) para mejorar encapsulación.
- La lista `USUARIOS_PREDEFINIDOS` se mantiene como `public static final`.
- Mejora la mantenibilidad y seguridad de los datos, evitando modificaciones
  accidentales.