@@ -1,68 +1,83 @@
 package com.ondra.users.data;
 
+import lombok.Getter;
 import lombok.AllArgsConstructor;
-import lombok.Data;
-import java.util.Arrays;
 import java.util.List;
 
 /**
  * Proporciona datos predefinidos de artistas y su información asociada.
+ * Clase utilitaria que no debe ser instanciada.
  */
-public class ArtistasData {
+public final class ArtistasData {
+
+    // Constantes para redes sociales
+    private static final String INSTAGRAM = "INSTAGRAM";
+    private static final String X = "X";
+    private static final String SPOTIFY = "SPOTIFY";
+    private static final String YOUTUBE = "YOUTUBE";
+    private static final String TIKTOK = "TIKTOK";
+    private static final String FACEBOOK = "FACEBOOK";
+
+    /**
+     * Constructor privado para evitar instanciación de clase utilitaria.
+     */
+    private ArtistasData() {
+        throw new UnsupportedOperationException("Esta es una clase utilitaria y no debe ser instanciada");
+    }
 
     /**
      * Contiene la información principal de un artista.
      */
-    @Data
+    @Getter
     @AllArgsConstructor
     public static class ArtistaInfo {
 
         /**
          * Nombre artístico del artista.
          */
-        public String nombreArtistico;
+        private final String nombreArtistico;
 
         /**
          * Nombre real del artista.
          */
-        public String nombreReal;
+        private final String nombreReal;
 
         /**
          * Identificador único utilizado en la plataforma.
          */
-        public String username;
+        private final String username;
 
         /**
          * Breve descripción del artista.
          */
-        public String biografia;
+        private final String biografia;
 
         /**
          * Lista de redes sociales en las que el artista tiene presencia.
          */
-        public List<String> redesSociales;
+        private final List<String> redesSociales;
 
         /**
          * Indica si el artista es tendencia.
          */
-        public boolean esTendencia;
+        private final boolean esTendencia;
 
         /**
          * URL de la imagen compartida correspondiente al artista.
          */
-        public String urlImagenCompartida;
+        private final String urlImagenCompartida;
     }
 
     /**
      * Lista predefinida de artistas con información básica.
      */
-    public static final List<ArtistaInfo> ARTISTAS_PREDEFINIDOS = Arrays.asList(
+    public static final List<ArtistaInfo> ARTISTAS_PREDEFINIDOS = List.of(
             new ArtistaInfo(
                     "Duki",
                     "Mauro Ezequiel Lombardo Quiroga",
                     "duki",
                     "Cantante, rapero y compositor argentino, considerado uno de los mayores exponentes del trap latino.",
-                    Arrays.asList("INSTAGRAM", "X", "SPOTIFY", "YOUTUBE", "TIKTOK", "FACEBOOK"),
+                    List.of(INSTAGRAM, X, SPOTIFY, YOUTUBE, TIKTOK, FACEBOOK),
                     true,
                     "https://res.cloudinary.com/dh6w4hrx7/image/upload/v1764201894/duki_s9ptgw.jpg"
             ),
@@ -71,7 +86,7 @@ public class ArtistasData {
                     "Aitana Ocaña Morales",
                     "aitana",
                     "Cantante española de pop. Participó en OT 2017 y cuenta con temas reconocidos.",
-                    Arrays.asList("INSTAGRAM", "X", "SPOTIFY", "YOUTUBE", "TIKTOK", "FACEBOOK"),
+                    List.of(INSTAGRAM, X, SPOTIFY, YOUTUBE, TIKTOK, FACEBOOK),
                     true,
                     "https://res.cloudinary.com/dh6w4hrx7/image/upload/v1764201872/aitana_s6j1u4.jpg"
             ),
@@ -80,7 +95,7 @@ public class ArtistasData {
                     "Tim Bergling",
                     "avicii",
                     "DJ y productor sueco de referencia en el género electrónico.",
-                    Arrays.asList("INSTAGRAM", "X", "SPOTIFY", "YOUTUBE", "FACEBOOK"),
+                    List.of(INSTAGRAM, X, SPOTIFY, YOUTUBE, FACEBOOK),
                     false,
                     "https://res.cloudinary.com/dh6w4hrx7/image/upload/v1764201873/avicii_q2afmo.jpg"
             ),
@@ -89,7 +104,7 @@ public class ArtistasData {
                     "Ramón Luis Ayala Rodríguez",
                     "daddyyankee",
                     "Artista puertorriqueño considerado pionero del género urbano.",
-                    Arrays.asList("INSTAGRAM", "X", "SPOTIFY", "YOUTUBE", "FACEBOOK", "TIKTOK"),
+                    List.of(INSTAGRAM, X, SPOTIFY, YOUTUBE, FACEBOOK, TIKTOK),
                     true,
                     "https://res.cloudinary.com/dh6w4hrx7/image/upload/v1764201880/daddyyankee_vigfof.jpg"
             ),
@@ -98,7 +113,7 @@ public class ArtistasData {
                     "Rosalía Vila Tobella",
                     "rosalia",
                     "Artista española que fusiona flamenco y pop urbano.",
-                    Arrays.asList("INSTAGRAM", "X", "SPOTIFY", "YOUTUBE", "TIKTOK"),
+                    List.of(INSTAGRAM, X, SPOTIFY, YOUTUBE, TIKTOK),
                     true,
                     "https://res.cloudinary.com/dh6w4hrx7/image/upload/v1764201917/rosalia_x1mhzj.jpg"
             ),
@@ -107,7 +122,7 @@ public class ArtistasData {
                     "Sanguijuelas del Guadiana",
                     "sanguijuelasdelguadiana",
                     "Banda española que mezcla rock alternativo, blues y poesía urbana.",
-                    Arrays.asList("INSTAGRAM", "X", "SPOTIFY", "YOUTUBE", "TIKTOK"),
+                    List.of(INSTAGRAM, X, SPOTIFY, YOUTUBE, TIKTOK),
                     true,
                     "https://res.cloudinary.com/dh6w4hrx7/image/upload/v1764201921/sanguijuelasdelguadiana_io5l2x.jpg"
             ),
@@ -116,7 +131,7 @@ public class ArtistasData {
                     "Pedro Luis Domínguez Quevedo",
                     "quevedo",
                     "Cantante español de trap y reguetón con impacto internacional.",
-                    Arrays.asList("INSTAGRAM", "X", "SPOTIFY", "YOUTUBE", "TIKTOK"),
+                    List.of(INSTAGRAM, X, SPOTIFY, YOUTUBE, TIKTOK),
                     true,
                     "https://res.cloudinary.com/dh6w4hrx7/image/upload/v1764259674/quevedo_b822uv.jpg"
             ),
@@ -125,7 +140,7 @@ public class ArtistasData {
                     "Extremoduro",
                     "extremoduro",
                     "Banda española de rock liderada por Robe Iniesta.",
-                    Arrays.asList("INSTAGRAM", "X", "SPOTIFY", "YOUTUBE", "FACEBOOK"),
+                    List.of(INSTAGRAM, X, SPOTIFY, YOUTUBE, FACEBOOK),
                     false,
                     "https://res.cloudinary.com/dh6w4hrx7/image/upload/v1764259674/extremoduro_n3ir0m.jpg"
             ),
@@ -134,7 +149,7 @@ public class ArtistasData {
                     "Arde Bogotá",
                     "ardebogota",
                     "Banda española de indie rock reconocida por su puesta en escena.",
-                    Arrays.asList("INSTAGRAM", "X", "SPOTIFY", "YOUTUBE", "TIKTOK"),
+                    List.of(INSTAGRAM, X, SPOTIFY, YOUTUBE, TIKTOK),
                     false,
                     "https://res.cloudinary.com/dh6w4hrx7/image/upload/v1764259677/ardebogota_ik3zwo.jpg"
             ),
@@ -143,7 +158,7 @@ public class ArtistasData {
                     "Michael Anthony Torres Monge",
                     "myketowers",
                     "Artista puertorriqueño destacado en trap y reguetón.",
-                    Arrays.asList("INSTAGRAM", "X", "SPOTIFY", "YOUTUBE", "TIKTOK", "FACEBOOK"),
+                    List.of(INSTAGRAM, X, SPOTIFY, YOUTUBE, TIKTOK, FACEBOOK),
                     false,
                     "https://res.cloudinary.com/dh6w4hrx7/image/upload/v1764259673/myketowers_gg8ttu.jpg"
             ),
@@ -152,7 +167,7 @@ public class ArtistasData {
                     "Ramón Melendi Espina",
                     "melendi",
                     "Cantautor español que combina pop, rumba y flamenco.",
-                    Arrays.asList("INSTAGRAM", "X", "SPOTIFY", "YOUTUBE", "FACEBOOK"),
+                    List.of(INSTAGRAM, X, SPOTIFY, YOUTUBE, FACEBOOK),
                     false,
                     "https://res.cloudinary.com/dh6w4hrx7/image/upload/v1764259673/melendi_xau7np.jpg"
             ),
@@ -161,7 +176,7 @@ public class ArtistasData {
                     "Benito Antonio Martínez Ocasio",
                     "badbunny",
                     "Artista puertorriqueño de relevancia internacional en música urbana.",
-                    Arrays.asList("INSTAGRAM", "X", "SPOTIFY", "YOUTUBE", "TIKTOK", "FACEBOOK"),
+                    List.of(INSTAGRAM, X, SPOTIFY, YOUTUBE, TIKTOK, FACEBOOK),
                     true,
                     "https://res.cloudinary.com/dh6w4hrx7/image/upload/v1764259677/badbunny_hgsxp4.jpg"
             ),
@@ -170,7 +185,7 @@ public class ArtistasData {
                     "Fito y Fitipaldis",
                     "fitoyfitipaldis",
                     "Banda española de rock liderada por Fito Cabrales.",
-                    Arrays.asList("INSTAGRAM", "X", "SPOTIFY", "YOUTUBE", "FACEBOOK"),
+                    List.of(INSTAGRAM, X, SPOTIFY, YOUTUBE, FACEBOOK),
                     false,
                     "https://res.cloudinary.com/dh6w4hrx7/image/upload/v1764259674/fitofitipaldis_obs5zc.jpg"
             ),
@@ -179,7 +194,7 @@ public class ArtistasData {
                     "Juan Manuel Magán González",
                     "juanmagan",
                     "DJ y productor español asociado al electro latino.",
-                    Arrays.asList("INSTAGRAM", "X", "SPOTIFY", "YOUTUBE", "FACEBOOK", "TIKTOK"),
+                    List.of(INSTAGRAM, X, SPOTIFY, YOUTUBE, FACEBOOK, TIKTOK),
                     false,
                     "https://res.cloudinary.com/dh6w4hrx7/image/upload/v1764259674/juanmagan_wwm3cq.jpg"
             ),
@@ -188,7 +203,7 @@ public class ArtistasData {
                     "Estopa",
                     "estopa",
                     "Dúo español de rumba y rock formado por los hermanos Muñoz.",
-                    Arrays.asList("INSTAGRAM", "X", "SPOTIFY", "YOUTUBE", "FACEBOOK"),
+                    List.of(INSTAGRAM, X, SPOTIFY, YOUTUBE, FACEBOOK),
                     false,
                     "https://res.cloudinary.com/dh6w4hrx7/image/upload/v1764259674/estopa_sq01bj.jpg"
             ),
@@ -197,7 +212,7 @@ public class ArtistasData {
                     "Eladio Carrión Morales",
                     "eladiocarrion",
                     "Cantante puertorriqueño de trap con colaboraciones destacadas.",
-                    Arrays.asList("INSTAGRAM", "X", "SPOTIFY", "YOUTUBE", "TIKTOK"),
+                    List.of(INSTAGRAM, X, SPOTIFY, YOUTUBE, TIKTOK),
                     false,
                     "https://res.cloudinary.com/dh6w4hrx7/image/upload/v1764259674/eladiocarrion_xwiuvd.jpg"
             ),
@@ -206,7 +221,7 @@ public class ArtistasData {
                     "Coldplay",
                     "coldplay",
                     "Banda británica de rock alternativo de reconocimiento mundial.",
-                    Arrays.asList("INSTAGRAM", "X", "SPOTIFY", "YOUTUBE", "FACEBOOK", "TIKTOK"),
+                    List.of(INSTAGRAM, X, SPOTIFY, YOUTUBE, FACEBOOK, TIKTOK),
                     false,
                     "https://res.cloudinary.com/dh6w4hrx7/image/upload/v1764259675/coldplay_iyjftl.jpg"
             ),
@@ -215,7 +230,7 @@ public class ArtistasData {
                     "Taylor Alison Swift",
                     "taylor-swift",
                     "Cantautora estadounidense influyente en pop y country contemporáneo.",
-                    Arrays.asList("INSTAGRAM", "X", "SPOTIFY", "YOUTUBE", "TIKTOK", "FACEBOOK"),
+                    List.of(INSTAGRAM, X, SPOTIFY, YOUTUBE, TIKTOK, FACEBOOK),
                     true,
                     "https://res.cloudinary.com/dh6w4hrx7/image/upload/v1764259673/taylorswift_nwpyru.jpg"
             ),
@@ -224,7 +239,7 @@ public class ArtistasData {
                     "Jorge Escorial Puy",
                     "recycled-j",
                     "Artista español que fusiona pop urbano, rap y electrónica.",
-                    Arrays.asList("INSTAGRAM", "X", "SPOTIFY", "YOUTUBE", "TIKTOK"),
+                    List.of(INSTAGRAM, X, SPOTIFY, YOUTUBE, TIKTOK),
                     false,
                     "https://res.cloudinary.com/dh6w4hrx7/image/upload/v1764259935/recycledj_fjcmgy.jpg"
             ),
@@ -233,7 +248,7 @@ public class ArtistasData {
                     "Amador Rivas",
                     "los-psicootronic",
                     "Grupo ficticio asociado al tema Mandanga Style.",
-                    Arrays.asList("INSTAGRAM", "X", "SPOTIFY", "YOUTUBE", "TIKTOK"),
+                    List.of(INSTAGRAM, X, SPOTIFY, YOUTUBE, TIKTOK),
                     false,
                     "https://res.cloudinary.com/dh6w4hrx7/image/upload/v1764260119/psicomotronic_mwh4te.jpg"
             )
